started chpater 2, updated code

--- a/main.tex
+++ b/main.tex
@@ -4,6 +4,7 @@
 \usepackage[english]{babel}
 
 \usepackage[backend=biber,style=authoryear-ibid]{biblatex}
+\usepackage{csquotes}
 \addbibresource{references.bib}
 
 \usepackage[a4paper]{geometry}
@@ -28,10 +29,6 @@
 \usepackage{mathtools}
 \usepackage{amsmath}
 \usepackage{siunitx}
-
-%\title{XY model}
-%\author{Musso}
-%\date{}
 
 
 \begin{document}
@@ -94,7 +91,6 @@
 \textbf{{\Large November 2020}}
 
 \end{titlepage}
-
 
 \tableofcontents
 
