--- a/references.bib
+++ b/references.bib
@@ -1,22 +1,59 @@
 @book{pathria1972statistical,
-	  title={Statistical Mechanics},
-	    author={Pathria, R.K.},
-	      isbn={9780080167473},
-	        lccn={lc73181690},
-		  series={International series of monographs in natural philosophy},
-		    url={https://books.google.it/books?id=ejUVnQEACAAJ},
-		      year={1972},
-		        publisher={Elsevier Science \& Technology Books}
+	title={Statistical Mechanics},
+	author={Pathria, R.K.},
+	isbn={9780080167473},
+	lccn={lc73181690},
+	series={International series of monographs in natural philosophy},
+	url={https://books.google.it/books?id=ejUVnQEACAAJ},
+	year={1972},
+	publisher={Elsevier Science \& Technology Books}
 }
 
 @book{bransden2003physics,
-	  title={Physics of Atoms and Molecules},
-	    author={Bransden, B.H. and Joachain, C.J. and Plivier, T.J.},
-	      isbn={9780582356924},
-	        lccn={80041903},
-		  series={Pearson Education},
-		    url={https://books.google.it/books?id=i5IPWXDQlcIC},
-		      year={2003},
-		        publisher={Prentice Hall}
+	title={Physics of Atoms and Molecules},
+	author={Bransden, B.H. and Joachain, C.J. and Plivier, T.J.},
+	isbn={9780582356924},
+	lccn={80041903},
+	series={Pearson Education},
+	url={https://books.google.it/books?id=i5IPWXDQlcIC},
+	year={2003},
+	publisher={Prentice Hall}
 }
 
+@article{PhysRevLett.20.589,
+	title = {Dependence of Critical Properties on Dimensionality of Spins},
+	author = {Stanley, H. E.},
+	journal = {Phys. Rev. Lett.},
+	volume = {20},
+	issue = {12},
+	pages = {589--592},
+	numpages = {0},
+	year = {1968},
+	month = {Mar},
+	publisher = {American Physical Society},
+	doi = {10.1103/PhysRevLett.20.589},
+	url = {https://link.aps.org/doi/10.1103/PhysRevLett.20.589}
+}
+
+@book{Nolting2009,
+	doi = {10.1007/978-3-540-85416-6},
+	url = {https://doi.org/10.1007/978-3-540-85416-6},
+	year = {2009},
+	publisher = {Springer Berlin Heidelberg},
+	author = {Wolfgang Nolting and Anupuru Ramakanth},
+	title = {Quantum Theory of Magnetism}
+}
+
+@article{Kramers1941,
+    doi = {10.1103/physrev.60.252},
+    url = {https://doi.org/10.1103/physrev.60.252},
+    year = {1941},
+    month = aug,
+    publisher = {American Physical Society ({APS})},
+    volume = {60},
+    number = {3},
+    pages = {252--262},
+    author = {H. A. Kramers and G. H. Wannier},
+    title = {Statistics of the Two-Dimensional Ferromagnet. Part I},
+    journal = {Physical Review}
+}
