added conclusion, updated code

--- a/main.tex
+++ b/main.tex
@@ -28,8 +28,11 @@
 % loading in math packages
 \usepackage{mathtools}
 \usepackage{amsmath}
+\usepackage{amssymb}
 \usepackage{siunitx}
+\usepackage{gensymb}
 
+\usepackage[version=4]{mhchem}
 
 \begin{document}
 
