--- a/references.bib
+++ b/references.bib
@@ -29,7 +29,6 @@
 	pages = {589--592},
 	numpages = {0},
 	year = {1968},
-	month = {Mar},
 	publisher = {American Physical Society},
 	doi = {10.1103/PhysRevLett.20.589},
 	url = {https://link.aps.org/doi/10.1103/PhysRevLett.20.589}
@@ -45,15 +44,58 @@
 }
 
 @article{Kramers1941,
-    doi = {10.1103/physrev.60.252},
-    url = {https://doi.org/10.1103/physrev.60.252},
-    year = {1941},
-    month = aug,
-    publisher = {American Physical Society ({APS})},
-    volume = {60},
-    number = {3},
-    pages = {252--262},
-    author = {H. A. Kramers and G. H. Wannier},
-    title = {Statistics of the Two-Dimensional Ferromagnet. Part I},
-    journal = {Physical Review}
+	doi = {10.1103/physrev.60.252},
+	url = {https://doi.org/10.1103/physrev.60.252},
+	year = {1941},
+	publisher = {American Physical Society ({APS})},
+	volume = {60},
+	number = {3},
+	pages = {252--262},
+	author = {H. A. Kramers and G. H. Wannier},
+	title = {Statistics of the Two-Dimensional Ferromagnet. Part I},
+	journal = {Physical Review}
+}
+
+@article{Kosterlitz_1973,
+	doi = {10.1088/0022-3719/6/7/010},
+	url = {https://doi.org/10.1088%2F0022-3719%2F6%2F7%2F010},
+	year = {1973},
+	publisher = {{IOP} Publishing},
+	volume = {6},
+	number = {7},
+	pages = {1181--1203},
+	author = {J M Kosterlitz and D J Thouless},
+	title = {Ordering, metastability and phase transitions in two-dimensional systems},
+	journal = {Journal of Physics C: Solid State Physics}
+}
+
+
+@article{Metropolis1953,
+  doi = {10.1063/1.1699114},
+  url = {https://doi.org/10.1063/1.1699114},
+  year = {1953},
+  publisher = {{AIP} Publishing},
+  volume = {21},
+  number = {6},
+  pages = {1087--1092},
+  author = {Nicholas Metropolis and Arianna W. Rosenbluth and Marshall N. Rosenbluth and Augusta H. Teller and Edward Teller},
+  title = {Equation of State Calculations by Fast Computing Machines},
+  journal = {The Journal of Chemical Physics}
+}
+
+@incollection{1988,
+  doi = {10.1016/b978-0-444-87109-1.50006-6},
+  url = {https://doi.org/10.1016/b978-0-444-87109-1.50006-6},
+  year = {1988},
+  publisher = {Elsevier},
+  pages = {1--7},
+  title = {Introduction to Theory of Finite-Size Scaling},
+  booktitle = {Finite-Size Scaling}
+}
+
+@article{Lan,
+  author = {Lan, Ti-Yen and Hsieh, Yun-Da and Kao, Ying-Jer},
+  year = {2012},
+  month = {11},
+  title = {High-precision Monte Carlo study of the three-dimensional XY model on GPU}
 }
